# astra_assignment

./: CMakeLists.txt  README.md  fsmodel.cpp  fsmodel.hpp  main.cpp
.github/workflows/: build-deb.yml
debian/: changelog  control  rules
package/debian/: changelog  control
src/: fsmodel.cpp  fsmodel.hpp  main.cpp
